...
                                fontSize: 44, fontWeight: FontWeight.w600));
                      },
                    ),
                  ),
                  const Padding(
                    padding: EdgeInsets.symmetric(vertical: 10.0),
                    child: Text('This is your daily food for thought:',
                        style: TextStyle(
                            fontSize: 24, fontWeight: FontWeight.w100)),
                  ),
                  const SizedBox(height: 80),
                  GetBuilder<AffirmationController>(
                    initState: (_) async {
...
                      }
                    },
                  ),
                  const SizedBox(height: 200),
                  Center(
                    child: TextButton(
                      key: const ValueKey('ready-btn'),
                      onPressed: () {
                        Get.toNamed('/home');
                      },
                      child: const Text('I Am Ready...',
                          style: TextStyle(
                              fontSize: 40,
...
