...
                            const SizedBox(
                              height: 15,
                            ),
                            Container(
                              width: double.infinity,
                              child: ElevatedButton(
                                 key: const ValueKey('register-btn'),
                                onPressed: () {
                                  Navigator.pushReplacementNamed(
                                      context, '/sign_up');
                                },
                                // ignore: sort_child_properties_last
                                child: const Text('Create an account',
...
